--- a/guacamole/src/main/frontend/src/app/client/templates/guacClientNotification.html
+++ b/guacamole/src/main/frontend/src/app/client/templates/guacClientNotification.html
@@ -1,5 +1,8 @@
 <div class="client-status-modal" ng-class="{ shown: status }">
     <guac-modal>
+        <div class="notification-header">
+            <img src="https://static.cradlepointecm.com/epa/ncx-auth/12155-72188/images/ncx-logo-1f97624b211926c36bd73b904f00dd97.svg" alt="NCX Logo" class="ncx-logo">
+        </div>
         <guac-notification notification="status"></guac-notification>
     </guac-modal>
 </div>
