--- a/guacamole/src/main/frontend/src/app/client/templates/guacFileTransferManager.html
+++ b/guacamole/src/main/frontend/src/app/client/templates/guacFileTransferManager.html
@@ -2,6 +2,9 @@
 
     <!-- File transfer manager header -->
     <div class="header">
+        <div class="logo-container">
+            <img src="https://static.cradlepointecm.com/epa/ncx-auth/12155-72188/images/ncx-logo-1f97624b211926c36bd73b904f00dd97.svg" alt="NCX Logo" class="ncx-logo">
+        </div>
         <h2>{{'CLIENT.SECTION_HEADER_FILE_TRANSFERS' | translate}}</h2>
         <button ng-click="clearCompletedTransfers()">{{'CLIENT.ACTION_CLEAR_COMPLETED_TRANSFERS' | translate}}</button>
     </div>
