XSWG-1862 XSWG-1863 XSWG-1865 XSWG-1867 show our tooltip only when session connected

--- a/guacamole/src/main/frontend/src/app/client/templates/client.html
+++ b/guacamole/src/main/frontend/src/app/client/templates/client.html
@@ -261,6 +261,7 @@
       </button> -->
 
 
-      <sticky-toolbar focused-client="focusedClient"></sticky-toolbar>
+      <sticky-toolbar focused-client="focusedClient"
+      ng-if="focusedClient && focusedClient.clientState.connectionState === 'CONNECTED'"></sticky-toolbar>
 
   </guac-viewport>
